# tee-morphosis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yml
src/: error.rs  lib.rs  tee.rs
src/tee/: builder.rs  compose.rs  hsl.rs  parts.rs  skin.rs  uv.rs
tests/: hsl.rs  make_composed_folder.rs  make_folers.rs  make_raw_folder.rs
