
[package]
name = "tee_morphosis"
version = "1.0.0"
edition = "2024"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/PulseClient-ddnet/tee-morphosis"
license = "MIT"                                                   #"Apache-2.0"
description = "Lib for parsing, splitting and building tee"
keywords = ["ddnet", "parsing", "tee", "skin", "uv"]
readme = "README.md"

[dependencies]
bytes = "1.10.1"
reqwest = {version="0.12.24",optional = true}
tokio = { version = "1.48.0", features = ["full"], optional = true }
tracing = "^0.1"
thiserror = "^2"
image = { version = "0.25.8", default-features = false, features = ["png", "webp"] }


[features]
default = []
full = ["net"]
net = ["tokio", "reqwest"]

[package.metadata.docs.rs]
all-features = true

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 24
strip = true
incremental = true
debug-assertions = true
overflow-checks = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
